test/fail/aeneas_bug.v3
def addInitFor(decl: Decl) {
		if (VstCompound.?(decl)) {
			var compound = VstCompound.!(decl), ctype = compound.getDeclaredType();
			compound.verifier = null;
			var ic = prog.ir.makeIrClass(ctype);
			var constructor = ic.methods[0], init = false;
			if (constructor != null && VstComponent.?(decl)) {
				init = true;
			}
			if (compound.isEnum() && compound.params != null) {
				createEnumParamArrays(VstClass.!(compound));
				init = true;
			}
			if (init) {
				var decl = VstNew.!(constructor.source);
				decl.initIndex = prog.ir.init.length;
				prog.ir.init.add(constructor);
			}
		}
}
